# snap-document.V1

./: .env.dev.example  .env.example  .env.production.example  .gitignore  Makefile  README.md  composer.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.js
.docker/local/python/: .env.example  .gitignore  Dockerfile  pyproject.toml  settings.py
.docker/local/python/api/: main.py
.docker/local/python/api/controller/: chatbot.py
.docker/local/python/api/models/: chatbot_engine.py  images_store.py  rag.py  s3.py  voctor_store.py
.docker/local/python/api/routers/: chat.py  chroma.py
.docker/local/python/api/schemas/: chat.py  chroma.py
.docker/local/python/api/services/: chat_engine.py  chroma_engine.py  pdf_helper.py
.docker/local/python/chromadb_data/Man_Digest_v9/: chroma.sqlite3
.docker/local/python/chromadb_data/PCBmanual3DV5/: chroma.sqlite3
.docker/local/python/chromadb_datas/Man_Digest_v9/: chroma.sqlite3
.docker/local/python/chromadb_datas/PCBmanual3DV5/: chroma.sqlite3
.docker/local/python/chromadb_datas/abc/: chroma.sqlite3
.docker/production/: cloudformation-vpc.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_develop_image.yml  build_production_image.yml  debug_test.yml
app/Enums/: GptEngineStatus.php
app/Exceptions/: CommonException.php  GptEngineProcessException.php  Handler.php
app/Http/: Kernel.php
app/Models/: Chat.php  (+5 more)
app/Python/: .tool-versions  pyproject.toml
config/: api.php  app.php  domain.php  filesystems.php  logging.php  s3.php
routes/: api.php  web.php
(+170 files in other folders)
