[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["yuya0628arsaga <yuya.ogawa@arsaga.jp>"]

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

python-dotenv = "^1.0.0"
openai = "^1.6.1"
chromadb = "0.4.17"
tiktoken = "^0.5.2"
google-cloud-firestore = "^2.14.0"
firebase-admin = "^6.3.0"
boto3 = "^1.34.17"

pysqlite3-binary = "^0.5.2"
# pysqlite3 = "^0.5.2"  # 「Chroma には SQLite > 3.35 が必要」のエラーが出るため一旦削除

# PDF処理用
"pdfminer.six" = "^20231228"
langchain-openai = "^0.1.3"
langchain = "^0.1.16"
langchain-community = "^0.0.33"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
